--- a/style.css
+++ b/style.css
@@ -11,14 +11,6 @@ body {
     
 }
 
-
-.header {
-    
-    
-}
-
-
-
 .logo {
     width: 750px;
 }
@@ -45,8 +37,6 @@ body {
 }
 
 
-
-
 .title{
     line-height: 0px;
 }
@@ -60,13 +50,15 @@ p{
     font-size: 90%;
 }
 
+.filter_list
+    {list-style-type: none;
+    display: flex;
+    flex-direction: row;}
+    
 
 
 img{
     width: 15%;
-}
-.research{
-    
 }
 
 i {
@@ -81,9 +73,10 @@ i {
   }
 
 .content{
-    background:  #F2F2F2;
+    display: flex;    
     width: 100%;
     padding-top: 52px;
+    justify-content: space-between;
       
 }
 
@@ -94,10 +87,10 @@ i {
 
 .accommodation{
     width: 60%;
-    
-    
+    margin-top: auto;
+    background:  #F2F2F2;
     display: flex;
-    flex-direction:row ;
+    flex-direction:row;
     flex-wrap: wrap;
     justify-content: left;
     
@@ -136,8 +129,8 @@ i {
 
 
 .popular{
-    width: 
-    background: #F2F2F2;
+    width: 35%;
+    background:  #F2F2F2;
 }
 
 .nav{
